# stock_copilot

./: Dockerfile  alpha_crew.py  app.py  apppp.py  dev.ipynb  env.py  epsilon_crew.py  hi.ipynb  pyproject.toml  report.py  requirements.txt  symbol.py  tools.py  utils.py
dev_crew/: .gitignore  agents.py  main.py
legacy/: SEC_tool copy.py  alpha_crew.py  app.py  apppp copy.py  beta_crew.py  delta_crew.py  epsilon_crew.py  poem.txt  tools.py  utils.py
tooling/: SEC_tool.py  polygon_tool.py
