[tool.poetry]
name = "stock-copilot"
version = "0.1.0"
description = ""
authors = ["Kerim Tricic <kerim.tricic@dualsharks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
crewai = "^0.76.9"
boto3 = "^1.35.54"
crewai-tools = "^0.13.4"
langchain-community = "^0.3.5"
streamlit = "^1.39.0"
langchain = "^0.3.7"
sec-api = "^1.0.25"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
